Made navigation position fixed and added .8 opacity, also added % margin to banner so the fixed nav isn't covering it anymore

--- a/css/index.css
+++ b/css/index.css
@@ -178,6 +178,9 @@ p {
   margin: 0 auto;
 }
 .nav-content {
+  position: fixed;
+  width: 100%;
+  opacity: 0.8;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -236,6 +239,12 @@ footer {
 }
 .home .banner {
   border-radius: 5px;
+  margin-top: 13%;
+}
+@media (max-width: 500px) {
+  .home .banner {
+    margin-top: 15%;
+  }
 }
 .home .space-images {
   display: flex;
