--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,6 +15,10 @@
   }
   .banner{
     border-radius: 5px;
+    margin-top: 13%;
+    @media @phone{
+      margin-top: 15%;
+    }
   }
 
   .space-images {
