--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,8 @@
 // Navigation code here
 .nav-content{
+    position: fixed;
+    width: 100%;
+    opacity: (.8);
     .flex(center, center);
     border: 2px solid @nav-border;
     background-color: @nav-border;
